--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1121,6 +1121,7 @@ section,
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  width: 25%;
 }
 
 .clients .client-logo img {
